--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,25 +1,22 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :username
-    %br/
-    = f.text_field :username, autofocus: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.website-content
+  .container
+    .row
+      .col-xs-12
+        %h2.text-center.auth-head-text Sign up
+        = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+          = devise_error_messages!
+          .field
+            = f.text_field :username, autofocus: true, class: 'auth-input', id: 'sign-up-username-input', placeholder: 'Username'
+          .field
+            = f.email_field :email, autocomplete: "email", class: 'auth-input', placeholder: 'Email'
+          .field
+            = f.password_field :password, autocomplete: "off", class: 'auth-input', id: 'sign-up-pwd-input', placeholder: 'Password'
+            - if @minimum_password_length
+              .pwd-tooltip-text
+                = "#{@minimum_password_length} characters minimum"
+          .field
+            = f.password_field :password_confirmation, autocomplete: "off", class: 'auth-input', placeholder: 'Password Confirmation'
+          .actions
+            = f.submit "Sign up", class: 'btn btn-default auth-submit'
+        .text-center.auth-links
+          = render "devise/shared/links"
