--- a/app/views/chat_rooms/search.html.haml
+++ b/app/views/chat_rooms/search.html.haml
@@ -1,12 +1,20 @@
-%h1 Users Search
-= form_for search_path, method: :get do |f|
-  %p
-    = f.label "Search for"
-    = text_field_tag :username, params[:username]
-    = submit_tag "Go", name: nil
-%ul
-  - unless @users.nil?
-    - @users.each do |user|
-      %li
-        %h3
-          = link_to user.username, id: user.id
+.website-content
+  .container
+    .row
+      .col-xs-12
+        %h1 Users Search
+        = form_for search_path, method: :get do |f|
+          %p
+            = text_field_tag :username, params[:username],class: 'form-control'
+            %br
+            = submit_tag 'Search', name: nil, class: 'btn btn-primary'
+        %ul
+          - unless @users.nil?
+            - @users.each do |user|
+              %li
+                %h3
+                  - if user.avatar.url.nil?
+                    = image_tag(asset_path("no_avatar.jpg"), class: "avatar")
+                  - else
+                    = image_tag(user.avatar.url, class: "avatar")
+                  = link_to user.username, id: user.id
