--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,10 +5,12 @@
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
     %title SocketChat
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'application'
-    = stylesheet_pack_tag 'application'
+    -#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    -#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    -#= javascript_pack_tag 'application'
+    -#= stylesheet_pack_tag 'application'
   %body
     = render 'layouts/header'
     = yield
