--- a/app/views/chat_rooms/index.html.haml
+++ b/app/views/chat_rooms/index.html.haml
@@ -1,4 +1,8 @@
-%h1 Chat rooms
-%p.lead= link_to 'New chat room', new_chat_room_path, class: 'btn btn-primary'
-%ul
-  = render @chat_rooms
+.website-content
+  .container
+    .row
+      .col-xs-12
+        %h1 Chat rooms
+        %p.lead= link_to 'New chat room', new_chat_room_path, class: 'btn btn-primary'
+        %ul
+          = render @chat_rooms
