--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,9 +10,13 @@
       #navbar.collapse.navbar-collapse
         %ul.nav.navbar-nav
           %li
-            = link_to 'Home', root_path, class: '', id: 'home-id'
+            = link_to 'Public chats', root_path, class: '', id: 'home-id'
           %li
             = link_to 'Search', search_path, class: '', id: 'home-id'
+          %li
+            = link_to 'Messages', root_path, class: '', id: 'home-id'
+          %li
+            = link_to 'Private chats', search_path, class: '', id: 'home-id'
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             %li
