Add some changes with membership and some code add

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,7 +14,7 @@
           %li
             = link_to 'Search', search_path, class: '', id: 'home-id'
           %li
-            = link_to 'Messages', root_path, class: '', id: 'home-id'
+            = link_to 'Messages', private_chat_rooms_path, class: '', id: 'home-id'
           %li
             = link_to 'Private chats', search_path, class: '', id: 'home-id'
         %ul.nav.navbar-nav.navbar-right
