--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -1,19 +1,13 @@
-%h1 Listing memberships
-
-%table
-  %thead
-    %tr
-      %th
-      %th
-      %th
-
-  %tbody
-    - @memberships.each do |membership|
-      %tr
-        %td= link_to 'Show', membership
-        %td= link_to 'Edit', edit_membership_path(membership)
-        %td= link_to 'Destroy', membership, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
-
-= link_to 'New Membership', new_membership_path
+%h3= link_to "go to #{@room.name}",room_path(@room)
+%h2
+  Add members to #{@room.name}
+%h4 current members
+%ul#member-list
+  - @memberships.each do |member|
+    %li= member.name
+%h4 Add Members
+%ul#add-users
+  - @users.each do |user|
+    %li
+      = user.username
+      %input{:id => "#{user.id}-add-member", :type => "checkbox"}/
