--- a/app/views/private_chat_rooms/show.html.haml
+++ b/app/views/private_chat_rooms/show.html.haml
@@ -1,6 +1,7 @@
 %p#notice= notice
+= @owner.username
+-#= @member
 
-
-= link_to 'Edit', edit_private_chat_room_path(@private_chat_room)
-\|
-= link_to 'Back', private_chat_rooms_path
+-#= link_to 'Edit', edit_private_chat_room_path(@private_chat_room)
+-#\|
+-#= link_to 'Back', private_chat_rooms_path
