Resolve problems with creating membership

--- a/app/views/private_chat_rooms/show.html.haml
+++ b/app/views/private_chat_rooms/show.html.haml
@@ -1,5 +1,5 @@
 %p#notice= notice
-= @owner.username
+= @private_chat_room.name
 -#= @member
 
 -#= link_to 'Edit', edit_private_chat_room_path(@private_chat_room)
