Make basis creating private chat 1 to 1

--- a/app/views/private_chat_rooms/index.html.haml
+++ b/app/views/private_chat_rooms/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing private_chat_rooms
+%h1 Сообщения
 
 %table
   %thead
@@ -8,8 +8,12 @@
       %th
 
   %tbody
-    - @rooms.each do |membership|
-      = membership.private_chat_room.id
+    - @rooms_owner.each do |membership|
+      %tr
+        %td= link_to membership.member.username, private_chat_room_path(membership.private_chat_room.id)
+        -#%td= link_to 'Edit', edit_private_chat_room_path(private_chat_room)
+        -#%td= link_to 'Destroy', private_chat_room, method: :delete, data: { confirm: 'Are you sure?' }
+    - @rooms_member.each do |membership|
       %tr
         %td= link_to membership.owner.username, private_chat_room_path(membership.private_chat_room.id)
         -#%td= link_to 'Edit', edit_private_chat_room_path(private_chat_room)
