--- a/app/views/private_chat_rooms/index.html.haml
+++ b/app/views/private_chat_rooms/index.html.haml
@@ -8,14 +8,12 @@
       %th
 
   %tbody
-    - @rooms_owner.each do |membership|
+    - @rooms.each do |membership|
       %tr
-        %td= link_to membership.member.username, private_chat_room_path(membership.private_chat_room.id)
-        -#%td= link_to 'Edit', edit_private_chat_room_path(private_chat_room)
-        -#%td= link_to 'Destroy', private_chat_room, method: :delete, data: { confirm: 'Are you sure?' }
-    - @rooms_member.each do |membership|
-      %tr
-        %td= link_to membership.owner.username, private_chat_room_path(membership.private_chat_room.id)
+        - if current_user.id == membership.member.id
+          %td= link_to membership.owner.username, private_chat_room_path(membership.private_chat_room.id)
+        - else
+          %td= link_to membership.member.username, private_chat_room_path(membership.private_chat_room.id)
         -#%td= link_to 'Edit', edit_private_chat_room_path(private_chat_room)
         -#%td= link_to 'Destroy', private_chat_room, method: :delete, data: { confirm: 'Are you sure?' }
 
