--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     -#= javascript_pack_tag 'application'
     -#= stylesheet_pack_tag 'application'
+    %link{:href => "https://fonts.googleapis.com/css?family=Kreon", :rel => "stylesheet"}/
   %body
     = render 'layouts/header'
     = yield
