--- a/app/views/private_chat_rooms/show.html.haml
+++ b/app/views/private_chat_rooms/show.html.haml
@@ -1,11 +1,12 @@
-%h1= @private_chat_room.name
-#private_messages{"data-private-chat-room-id" => "#{@private_chat_room.id}"}
-  = render @private_chat_room.private_messages
-%hr/
-= form_for @message, url: '#', html:{id: 'private_new_message'} do |f|
-  = hidden_field_tag 'private_chat_room_id', @private_chat_room.id
-  .form-group
-    = f.label :content
-    = f.text_area :content, class: 'form-control'
-    %small.text-muted From 2 to 1000 characters
-  = f.submit "Post", class: 'btn btn-primary btn-lg'
+.container-fluid
+  %h1= @private_chat_room.name
+  #private_messages{"data-private-chat-room-id" => "#{@private_chat_room.id}"}
+    = render @private_chat_room.private_messages
+  %hr/
+  = form_for @message, url: '#', html:{id: 'private_new_message'} do |f|
+    = hidden_field_tag 'private_chat_room_id', @private_chat_room.id
+    .form-group
+      = f.label :content
+      = f.text_area :content, class: 'form-control'
+      %small.text-muted From 2 to 1000 characters
+    = f.submit "Post", class: 'btn btn-primary btn-lg'
