--- a/app/javascript/style/application.scss
+++ b/app/javascript/style/application.scss
@@ -1,3 +1,5 @@
+$fa-font-path: "~font-awesome/fonts";
+@import '~font-awesome/scss/font-awesome';
 @import "auth";
 @import "header";
 @import "chat_room";
