--- a/app/javascript/style/chat_room.scss
+++ b/app/javascript/style/chat_room.scss
@@ -2,3 +2,26 @@
   max-height: 450px;
   overflow-y: auto;
 }
+
+.main-chat-container {
+  height: 100%;
+}
+
+.main-chat-row {
+  height: 100%;
+}
+
+.chat-menu-col {
+  height: 100%;
+  background-color: #3e4551;
+}
+
+.chat-messages-col {
+  height: 100%;
+}
+
+@media only screen and (min-width : 768px) {
+  .chat-menu-col {
+    width: 235px;
+  }
+}
