--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,4 +15,4 @@
   %body
     = render 'layouts/header'
     = yield
-    = render 'layouts/footer'
+    = render 'layouts/footer' unless no_footer_page(controller.controller_name, controller.action_name)
