--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,11 +12,11 @@
           %li
             = link_to 'Public chats', root_path, class: '', id: 'home-id'
           %li
-            = link_to 'Search', search_path, class: '', id: 'home-id'
+            = link_to 'Search', search_user_path, class: '', id: 'home-id'
           %li
             = link_to 'Messages', private_chat_rooms_path, class: '', id: 'home-id'
           %li
-            = link_to 'Private chats', search_path, class: '', id: 'home-id'
+            = link_to 'Private chats', multi_user_private_chat_rooms_path, class: '', id: 'home-id'
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             %li
