Add update to multi user private chat room and refactor code

--- a/app/views/multi_user_private_chat_rooms/edit.html.haml
+++ b/app/views/multi_user_private_chat_rooms/edit.html.haml
@@ -1,7 +1,13 @@
-%h1 Editing multi_user_private_chat_room
+.website-content
+  .container
+    .row
+      .col-xs-12
+        = form_for @chat_room, method: :put  do |f|
+          = f.text_field :name
+          = f.submit 'Update'
+        %h4 current members
+        - @users.each do |member|
+          = member.user.username
+          = button_to 'Delete from chat', [member],  method: :delete
+        = link_to 'Back', multi_user_private_chat_rooms_path
 
-= render 'form'
-
-= link_to 'Show', @multi_user_private_chat_room
-\|
-= link_to 'Back', multi_user_private_chat_rooms_path
