--- a/app/views/multi_user_private_chat_rooms/index.html.haml
+++ b/app/views/multi_user_private_chat_rooms/index.html.haml
@@ -1,21 +1,25 @@
-%h1 Multi-user private chats
+.website-content
+  .container
+    .row
+      .col-xs-12
+        %h1 Multi-user private chats
 
-%table
-  %thead
-    %tr
-      %th
-      %th
-      %th
+        %table
+          %thead
+            %tr
+              %th
+              %th
+              %th
 
-  %tbody
-    - @rooms.each do |membership|
-      %tr
-        %td= link_to membership.multi_user_private_chat_room.name, multi_user_private_chat_room_path(membership.multi_user_private_chat_room.id)
-    - @rooms_owner.each do |membership|
-      %tr
-        %td= link_to membership.name, multi_user_private_chat_room_path(membership.id)
-    %br
+          %tbody
+            - @users.each do |membership|
+              %tr
+                %td= link_to membership.multi_user_private_chat_room.name, multi_user_private_chat_room_path(membership.multi_user_private_chat_room.id)
+            - @owner.each do |membership|
+              %tr
+                %td= link_to membership.name, multi_user_private_chat_room_path(membership.id)
+            %br
 
-%br
+        %br
 
-= link_to 'New Multi user private chat room', new_multi_user_private_chat_room_path
+        = link_to 'New Multi user private chat room', new_multi_user_private_chat_room_path
