--- a/app/views/multi_user_private_chat_rooms/show.html.haml
+++ b/app/views/multi_user_private_chat_rooms/show.html.haml
@@ -1,28 +1,44 @@
-
-%h4 current members
-%ul#member-list
-  - @membership.each do |member|
-    %li= member.name
-- if current_user == @chat_room.user
-  %h1 Users Search
-  = form_for multi_user_private_chat_room_path(id: @chat_room.id), method: :get do |f|
-    %p
-      = text_field_tag :username, params[:username],class: 'form-control'
-      %br
-      = submit_tag 'Search', name: nil, class: 'btn btn-primary'
-  %ul
-    - unless @users.nil?
-      - @users.each do |user|
-        %li
-          %h3
-            - if user.avatar.url.nil?
-              = image_tag(asset_path("no_avatar.jpg"), class: "avatar")
-            - else
-              = image_tag(user.avatar.url, class: "avatar")
-            = user.username
-            = form_for @membership do |f|
-              = f.hidden_field :multi_user_private_chat_room_id, value: @chat_room.id
-              = f.hidden_field :user_id, value: user.id
-              = f.submit user.username
-
-= link_to 'Back', multi_user_private_chat_rooms_path
+.website-content
+  .container
+    .row
+      .col-xs-12
+        %h4 owner
+        %li= @chat_room.user.username
+        %h4 current members
+        - @users.each do |member|
+          %li= member.user.username
+        %br
+        %br
+        - if current_user == @chat_room.user
+          %h1 Users Search
+          = form_for multi_user_private_chat_room_path(id: @chat_room.id), method: :get do |f|
+            %p
+              = text_field_tag :username, params[:username],class: 'form-control'
+              %br
+              = submit_tag 'Search', name: nil, class: 'btn btn-primary'
+          %ul
+            - unless @find_users.nil?
+              - @find_users.each do |user|
+                %li
+                  %h3
+                    - if user.avatar.url.nil?
+                      = image_tag(asset_path("no_avatar.jpg"), class: "avatar")
+                    - else
+                      = image_tag(user.avatar.url, class: "avatar")
+                    = user.username
+                    = form_for @membership do |f|
+                      = f.hidden_field :multi_user_private_chat_room_id, value: @chat_room.id
+                      = f.hidden_field :user_id, value: user.id
+                      = f.submit user.username
+          = link_to 'Edit', edit_multi_user_private_chat_room_path(@chat_room.id)
+        = link_to 'Back', multi_user_private_chat_rooms_path
+        #multi_user_messages{"data-private-chat-room-id" => "#{@chat_room.id}"}
+          = render @chat_room.multi_user_messages
+        %hr/
+        = form_for @message, url: '#', html:{id: 'multi_user_new_message'} do |f|
+          = hidden_field_tag 'multi_user_private_chat_room_id', @chat_room.id
+          .form-group
+            = f.label :content
+            = f.text_area :content, class: 'form-control'
+            %small.text-muted From 2 to 1000 characters
+          = f.submit "Post", class: 'btn btn-primary btn-lg'
