--- a/app/views/multi_user_private_chat_rooms/show.html.haml
+++ b/app/views/multi_user_private_chat_rooms/show.html.haml
@@ -3,7 +3,7 @@
     .row
       .col-xs-12
         %h4 owner
-        %li= @chat_room.user.username
+        %li= @multi_chat_room.user.username
         %h4 current members
         - @users.each do |member|
           %li= member.user.username
@@ -27,16 +27,16 @@
                       = image_tag(user.avatar.url, class: "avatar")
                     = user.username
                     = form_for @membership do |f|
-                      = f.hidden_field :multi_user_private_chat_room_id, value: @chat_room.id
+                      = f.hidden_field :multi_user_private_chat_room_id, value: @multi_chat_room.id
                       = f.hidden_field :user_id, value: user.id
                       = f.submit user.username
-          = link_to 'Edit', edit_multi_user_private_chat_room_path(@chat_room.id)
+          = link_to 'Edit', edit_multi_user_private_chat_room_path(@multi_chat_room.id)
         = link_to 'Back', multi_user_private_chat_rooms_path
-        #multi_user_messages{"data-private-chat-room-id" => "#{@chat_room.id}"}
+        #multi_user_messages{"data-multi-user-private-chat-room-id" => "#{@multi_chat_room.id}"}
           = render @chat_room.multi_user_messages
         %hr/
         = form_for @message, url: '#', html:{id: 'multi_user_new_message'} do |f|
-          = hidden_field_tag 'multi_user_private_chat_room_id', @chat_room.id
+          = hidden_field_tag 'multi_user_private_chat_room_id', @multi_chat_room.id
           .form-group
             = f.label :content
             = f.text_area :content, class: 'form-control'
