--- a/app/javascript/style/header.scss
+++ b/app/javascript/style/header.scss
@@ -28,3 +28,15 @@
 .header-menu-item:hover {
   background-color: #3e4551 !important;
 }
+
+@media only screen and (min-width : 768px) and (max-width: 778px) {
+  .company-name {
+    width: 223px;
+  }
+}
+
+@media only screen and (min-width : 779px) {
+  .company-name {
+    width: 235px;
+  }
+}
