Add controller and models tests

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,7 +12,7 @@
           %li
             = link_to 'Public chats', root_path, class: '', id: 'home-id'
           %li
-            = link_to 'Search', search_user_path, class: '', id: 'home-id'
+            = link_to 'Search', search_path, class: '', id: 'home-id'
           %li
             = link_to 'Messages', private_chat_rooms_path, class: '', id: 'home-id'
           %li
