Finish tests without integration tests

--- a/app/views/multi_user_private_chat_rooms/show.html.haml
+++ b/app/views/multi_user_private_chat_rooms/show.html.haml
@@ -2,6 +2,8 @@
   .container
     .row
       .col-xs-12
+        %h1
+          = @multi_chat_room.name
         %h4 owner
         %li= @multi_chat_room.user.username
         %h4 current members
