--- a/app/javascript/style/chat_room.scss
+++ b/app/javascript/style/chat_room.scss
@@ -1,8 +1,3 @@
-#messages {
-  max-height: 450px;
-  overflow-y: auto;
-}
-
 .main-chat-container {
   height: 100%;
 }
@@ -12,96 +7,181 @@
 }
 
 .chat-menu-col {
-  height: 100%;
   background-color: #3e4551;
-  float: left;
+  height: 100%;
+  border-right: solid white 1px;;
 }
 
 .chat-messages-col {
   height: 100%;
-  background-color: black;
+  background-color: #F5F5F5;
 }
 
-@media only screen and (min-width : 768px) and (max-width: 778px) {
-  .chat-menu-col {
-    width: 223px;
-  }
-
-  .chat-messages-col {
-    left: 223px;
-    position: absolute;
-    right: 0;
-  }
+.chat-head-row {
+  height: 10%;
+  background-color: #3e4551;
+  display: flex;
 }
 
-@media only screen and (min-width : 778px) {
-  .chat-menu-col {
-    width: 235px;
-  }
-
-  .chat-messages-col {
-    left: 235px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-  }
+.chat-message-row {
+  height: calc(90% - 44px);
+  overflow-y: auto;
 }
 
-@media only screen and (max-width: 767px) {
-  .chat-menu-col {
-    visibility: collapse;
-  }
-
-  .chat-messages-col {
-    left: 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-  }
-}
-
-.left-chat-menu-section {
-  color: white;
-  font-size: 16pt;
-  font-weight: bolder;
-}
-
-.left-chat-menu-member {
-  color: white;
-  font-size: 14pt;
-  margin-bottom: 5px;
-}
-
-.chat-messages-container {
-  width: 100%;
-  height: 92%;
-}
-
-.chat-send-form-container {
-  width: 100%;
-  height: 8%;
-  background-color: #f5f5f5;
+.chat-message-form-row {
+  height: 44px;
+  background-color: #3e4551;
+  position: fixed;
+  margin-left: -15px;
+  bottom: 0;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 #private_new_message {
-  //width: 100%;
+  margin-top: 6px;
 }
 
 .private-message-text-area {
-  width: 70%;
-  float: left;
-}
-
-.btn-send-message {
-  width: 60px;
-  float: left;
-}
-
-.private-chat-input-group {
+  height: 34px !important;
+  resize: none;
 
 }
 
-.btn-private-chat-send {
-  width: 100%;
-  height: 100%;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//#messages {
+//  max-height: 450px;
+//  overflow-y: auto;
+//}
+//
+
+//
+//.main-chat-row {
+//  height: 100%;
+//}
+//
+//.chat-menu-col {
+//  height: 100%;
+//  background-color: #3e4551;
+//  float: left;
+//}
+//
+//.chat-messages-col {
+//  height: 100%;
+//  background-color: black;
+//}
+//
+//@media only screen and (min-width : 768px) and (max-width: 778px) {
+//  .chat-menu-col {
+//    width: 223px;
+//  }
+//
+//  .chat-messages-col {
+//    left: 223px;
+//    position: absolute;
+//    right: 0;
+//  }
+//}
+//
+//@media only screen and (min-width : 778px) {
+//  .chat-menu-col {
+//    width: 235px;
+//  }
+//
+//  .chat-messages-col {
+//    left: 235px;
+//    position: absolute;
+//    right: 0;
+//    bottom: 0;
+//  }
+//}
+//
+//@media only screen and (max-width: 767px) {
+//  .chat-menu-col {
+//    visibility: collapse;
+//  }
+//
+//  .chat-messages-col {
+//    left: 0;
+//    position: absolute;
+//    right: 0;
+//    bottom: 0;
+//  }
+//}
+//
+//.left-chat-menu-section {
+//  color: white;
+//  font-size: 16pt;
+//  font-weight: bolder;
+//}
+//
+//.left-chat-menu-member {
+//  color: white;
+//  font-size: 14pt;
+//  margin-bottom: 5px;
+//}
+//
+//.chat-messages-container {
+//  width: 100%;
+//  height: 92%;
+//}
+//
+//.chat-send-form-container {
+//  width: 100%;
+//  height: 8%;
+//  background-color: #f5f5f5;
+//}
+//
+//.private-chat-input-group {
+//
+//}
+//
+
+//
+//.btn-send-private-message {
+//  width: 100% !important;
+//  height: 100% !important;
+//}
