--- a/app/views/private_messages/_private_message.html.haml
+++ b/app/views/private_messages/_private_message.html.haml
@@ -1,4 +1,24 @@
-.card
+.container-fluid
+  .row
+    .col-xs-2.col-sm-3.col-md-3.col-lg-3
+    .col-xs-10.col-sm-9.col-md-9.col-lg-9
+      .row.message-user-data-row
+        .col-xs-6
+          = private_message.user.name
+        .col-xs-6
+          = private_message.timestamp
+      .row.message-text-row
+        .col-xs-12.message-text-col
+          = private_message.content
+
+
+
+
+
+
+
+
+-#.card
   .card-block
     .row
       .col-md-1
