--- a/app/views/private_messages/_private_message.html.haml
+++ b/app/views/private_messages/_private_message.html.haml
@@ -1,37 +1,25 @@
 .container-fluid
-  .row.chat-msg-row
-    .col-xs-2.col-sm-1.col-md-1.col-lg-1
-      .chat-avatar
-        - if private_message.user.avatar.present?
-          = image_tag private_message.user.avatar
-        - else
-          = image_tag asset_pack_path("#{private_message.user.avatar}")
-    .col-xs-10.col-sm-11.col-md-11.col-lg-11
-      .row.message-user-data-row
-        .col-xs-6.col-chat-msg-user-name
-          = private_message.user.name
-        .col-xs-6.col-chat-msg-date
-          %i.fa.fa-clock-o
-          = private_message.timestamp
-      .row.message-text-row
-        .col-xs-12.message-text-col
-          = private_message.content
-
-
-
-
-
-
-
-
--#.card
-  .card-block
-    .row
-      .col-md-1
-      .col-md-11
-        %p.card-text
-          %span.text-muted
-            = private_message.user.username
-            at #{private_message.timestamp} says
-          %br/
-          = private_message.content
+  - if private_message.user == current_user
+    .msg-container.darker
+      - if private_message.user.avatar.present?
+        = image_tag private_message.user.avatar, class: 'right'
+      - else
+        = image_tag asset_pack_path("#{private_message.user.avatar}"), class: 'right'
+      %p.chat-user-name
+        = private_message.user.name
+      %p
+        = private_message.content
+      %span.time-left
+        = time_ago_in_words(private_message.created_at)
+  - else
+    .msg-container
+      - if private_message.user.avatar.present?
+        = image_tag private_message.user.avatar
+      - else
+        = image_tag asset_pack_path("#{private_message.user.avatar}")
+      %p.chat-user-name
+        = private_message.user.name
+      %p
+        = private_message.content
+      %span.time-right
+        = time_ago_in_words(private_message.created_at)
