Make row for chat menu

--- a/app/javascript/style/chat_room.scss
+++ b/app/javascript/style/chat_room.scss
@@ -51,6 +51,12 @@
   resize: none;
 }
 
+.chat-main-menu-row {
+  height: 7%;
+}
+
+
+
 /* Chat containers */
 .msg-container {
   border: 2px solid #dedede;
