--- a/app/views/private_chat_rooms/show.html.haml
+++ b/app/views/private_chat_rooms/show.html.haml
@@ -1,6 +1,7 @@
 .container-fluid.main-chat-container
   .row.main-chat-row
     .hidden-xs.col-sm-4.col-md-3.col-lg-2.chat-menu-col
+      .row.chat-main-menu-row
     .col-xs-12.col-sm-8.col-md-9.col-lg-10.chat-messages-col
       .row.chat-head-row
       .row.chat-message-row#private_messages{"data-private-chat-room-id" => "#{@private_chat_room.id}"}
