--- a/app/views/private_chat_rooms/search.html.haml
+++ b/app/views/private_chat_rooms/search.html.haml
@@ -14,9 +14,9 @@
               %li
                 %h3
                   - if user.avatar.url.nil?
-                    = image_tag(asset_path("no_avatar.jpg"), class: "avatar")
+                    -#= image_tag(asset_path("no_avatar.jpg"), class: "avatar")
                   - else
-                    = image_tag(user.avatar.url, class: "avatar")
+                    -#= image_tag(user.avatar.url, class: "avatar")
                   = user.username
                   = form_for @room do |f|
                     = f.text_field :name, value: "#{current_user.username} #{user.username}"
