--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.card
+.c.c.card
   .card-block
     .row
       .col-md-1
@@ -7,5 +7,14 @@
           %span.text-muted
             = message.user.name
             at #{message.timestamp} says
-          %br/
-          = message.body
+          %br
+          %pre
+            = form_for message, method: :put, html: {hidden: true, id: "edit_message#{message.id}"}  do |f|
+              = f.text_field :body
+              = f.submit 'Update'
+            %span{id: "message#{message.id}"}
+              = message.body
+          - if current_user == message.user
+            = button_to 'Delete Message', [message],  method: :delete
+            %button.b_edit_message{ 'data-id': message.id }
+              Edit Message
