Work in progress: edit and delete buttons set in JS

--- a/app/javascript/style/chat_room.scss
+++ b/app/javascript/style/chat_room.scss
@@ -124,6 +124,14 @@
   font-weight: bolder;
 }
 
+//.message-action-button-hide {
+//  display: none;
+//}
+//
+//.message-action-button-show {
+//  display: inherit;
+//}
+
 
 
 
