--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -5,7 +5,6 @@
       .col-md-11
         %p.card-text
           %span.text-muted
-
             at #{message.timestamp} says
           %br
           %pre
@@ -14,10 +13,17 @@
               = f.submit 'Update'
             %span{id: "message#{message.id}"}
               = message.body
-          - if current_user == message.user
-            = button_to 'Delete Message', [message],  method: :delete
-            %button.b_edit_message{ 'data-id': message.id }
-              Edit Message
+              = button_to 'Delete Message', [message],  method: :delete, id: "public-msg-delete-#{message.id}"
+              %button.b_edit_message{ 'data-id': message.id, id: "public-msg-edit-#{message.id}" }
+                Edit Message
+            -#- if current_user == message.user
+            -#  = button_to 'Delete Message', [message],  method: :delete, id: "delete-public-msg-#{message.id}"
+            -#  %button.b_edit_message{ 'data-id': message.id }
+            -#    Edit Message
+            -#-else
+            -#  = button_to 'Delete Message', [message],  method: :delete, id: "public-msg-delete-#{message.id}"
+            -#  %button.b_edit_message{ 'data-id': message.id, id: "public-msg-edit-#{message.id}" }
+            -#    Edit Message
 
 
 
