--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -14,7 +14,7 @@
               = f.submit 'Update'
             %span{id: "message#{message.id}"}
               = message.body
-          - if current_user == message.user
+          - if current_user.id == message.user.id
             = button_to 'Delete Message', [message],  method: :delete
             %button.b_edit_message{ 'data-id': message.id }
               Edit Message
