--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,6 +1,7 @@
 %h1= @chat_room.title
 #messages{"data-chat-room-id" => "#{@chat_room.id}"}
-  = render @chat_room.messages
+  - @messages.each do |message|
+    = react_component('Message',{message: message, user: message.user, current_user: current_user})
 %hr/
 = form_for @message, url: '#' do |f|
   = hidden_field_tag 'chat_room_id', @chat_room.id
