--- a/app/views/multi_user_private_chat_rooms/show.html.haml
+++ b/app/views/multi_user_private_chat_rooms/show.html.haml
@@ -23,10 +23,10 @@
               - @find_users.each do |user|
                 %li
                   %h3
-                    - if user.avatar.url.nil?
-                      = image_tag(asset_path("no_avatar.jpg"), class: "avatar")
-                    - else
-                      = image_tag(user.avatar.url, class: "avatar")
+                    -#- if user.avatar.url.nil?
+                    -#  = image_tag(asset_path("no_avatar.jpg"), class: "avatar")
+                    -#- else
+                    -#  = image_tag(user.avatar.url, class: "avatar")
                     = user.username
                     = form_for @membership do |f|
                       = f.hidden_field :multi_user_private_chat_room_id, value: @multi_chat_room.id
