Revert "Remove elasticsearch & omniauth"
This reverts commit 24575af5ad7d12b0cacd85934e93d86d0c0c9446.

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,7 +3,7 @@
   .col-xs-10.col-sm-11.col-md-11.col-lg-11
     .row.message-user-data-row
       .col-xs-6
-        = message.user.email
+        = message.user.name
       .col-xs-6
         = message.timestamp
     .row.message-text-row
