--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -7,6 +7,8 @@
         .edit-user
           = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
             = devise_error_messages!
+            %div
+              = f.text_field :username, autofocus: true, class: 'auth-input', id: 'sign-up-username-input', placeholder: 'Username'
             .field
               = f.email_field :email, autocomplete: "email", class: 'auth-input', placeholder: 'Email'
             - if devise_mapping.confirmable? && resource.pending_reconfirmation?
