Remove elasticsearch & omniauth

--- a/app/views/multi_user_messages/_multi_user_message.html.haml
+++ b/app/views/multi_user_messages/_multi_user_message.html.haml
@@ -5,7 +5,7 @@
       .col-md-11
         %p.card-text
           %span.text-muted
-            = multi_user_message.user.username
+            = multi_user_message.user.email
             at #{multi_user_message.timestamp} says
           %br/
           = multi_user_message.content
