--- a/app/views/multi_user_private_chat_rooms/edit.html.haml
+++ b/app/views/multi_user_private_chat_rooms/edit.html.haml
@@ -7,7 +7,7 @@
           = f.submit 'Update'
         %h4 current members
         - @users.each do |member|
-          = member.user.username
+          = member.user.email
           = button_to 'Delete from chat', [member],  method: :delete
         = link_to 'Back', multi_user_private_chat_rooms_path
 
