--- a/app/views/multi_user_private_chat_rooms/show.html.haml
+++ b/app/views/multi_user_private_chat_rooms/show.html.haml
@@ -5,19 +5,12 @@
         %h1
           = @multi_chat_room.name
         %h4 owner
-        %li= @multi_chat_room.user.username
+        %li= @multi_chat_room.user.email
         %h4 current members
         - @users.each do |member|
-          %li= member.user.username
+          %li= member.user.email
         %br
         %br
-        - if current_user == @chat_room.user
-          %h1 Users Search
-          = form_for multi_user_private_chat_room_path(id: @chat_room.id), method: :get do |f|
-            %p
-              = text_field_tag :username, params[:username],class: 'form-control'
-              %br
-              = submit_tag 'Search', name: nil, class: 'btn btn-primary'
           %ul
             - unless @find_users.nil?
               - @find_users.each do |user|
@@ -31,7 +24,7 @@
                     = form_for @membership do |f|
                       = f.hidden_field :multi_user_private_chat_room_id, value: @multi_chat_room.id
                       = f.hidden_field :user_id, value: user.id
-                      = f.submit user.username
+                      = f.submit user.email
           = link_to 'Edit', edit_multi_user_private_chat_room_path(@multi_chat_room.id)
         = link_to 'Back', multi_user_private_chat_rooms_path
         #multi_user_messages{"data-multi-user-private-chat-room-id" => "#{@multi_chat_room.id}"}
