--- a/app/views/private_chat_rooms/index.html.haml
+++ b/app/views/private_chat_rooms/index.html.haml
@@ -15,9 +15,9 @@
             - @rooms.each do |membership|
               %tr
                 - if current_user.id == membership.member.id
-                  %td= link_to membership.owner.username, private_chat_room_path(membership.private_chat_room.id)
+                  %td= link_to membership.owner.email, private_chat_room_path(membership.private_chat_room.id)
                 - else
-                  %td= link_to membership.member.username, private_chat_room_path(membership.private_chat_room.id)
+                  %td= link_to membership.member.email, private_chat_room_path(membership.private_chat_room.id)
                 -#%td= link_to 'Edit', edit_private_chat_room_path(private_chat_room)
                 -#%td= link_to 'Destroy', private_chat_room, method: :delete, data: { confirm: 'Are you sure?' }
 
